  
  [ Daniel Hartwig ]
  * cmdline/apt-get.cc:
    - do not have space between "-a" and option when cross building
      (closes: #703792)
  * test/integration/test-apt-get-download:
    - fix test now that #1098752 is fixed
  * po/{ca,cs,ru}.po:
    - fix merge artifact
  
  [ Michael Vogt ]
  * methods/connect.cc:
    - use Errno() instead of strerror(), thanks to David Kalnischk

 -- Christian Perrier <bubulle@debian.org>  Sun, 24 Mar 2013 08:57:45 +0100

apt (0.9.7.9~exp1) experimental; urgency=low

  [ Niels Thykier ]
  * test/libapt/assert.h, test/libapt/run-tests:
    - exit with status 1 on test failure
  
  [ Daniel Hartwig ]
  * test/integration/framework:
    - continue after test failure but preserve exit status

  [ Programs translation updates ]
  * Turkish (Mert Dirik). Closes: #703526

  [ Colin Watson ]
  * methods/connect.cc:
    - provide useful error message in case of EAI_SYSTEM
      (closes: #703603)
  
  [ Michael Vogt ]
  * add new config options "Acquire::ForceIPv4" and 
    "Acquire::ForceIPv6" to allow focing one or the other
    (closes: #611891)
  * lp:~mvo/apt/fix-tagfile-hash:
    - fix false positives in pkgTagSection.Exists(), thanks to
      Niels Thykier for the testcase (closes: #703240)
    - this will require rebuilds of the clients as this used to
      be a inline function

 -- Michael Vogt <mvo@debian.org>  Fri, 22 Mar 2013 21:57:08 +0100

apt (0.9.7.8) unstable; urgency=criticial

  * SECURITY UPDATE: InRelease verification bypass
    - CVE-2013-1051
  
  [ David Kalnischk ]
  * apt-pkg/deb/debmetaindex.cc,
    test/integration/test-bug-595691-empty-and-broken-archive-files,
    test/integration/test-releasefile-verification:
    - disable InRelease downloading until the verification issue is
      fixed, thanks to Ansgar Burchardt for finding the flaw

 -- Michael Vogt <mvo@debian.org>  Thu, 14 Mar 2013 07:47:36 +0100

apt (0.9.7.8~exp2) experimental; urgency=low
