@@ -554,6 +554,18 @@ DPkg::Pre-Install-Pkgs {"/usr/sbin/dpkg-preconfigure --apt";};
      </listitem>
      </varlistentry>
 
+     <varlistentry><term><option>ForceIPv4</option></term>
+	 <listitem><para>
+         When downloading, force to use only the IPv4 protocol.
+	 </para></listitem>
+     </varlistentry>
+
+     <varlistentry><term><option>ForceIPv6</option></term>
+	 <listitem><para>
+         When downloading, force to use only the IPv6 protocol.
+	 </para></listitem>
+     </varlistentry>
+
    </variablelist>
  </refsect1>
 
