@@ -16,6 +16,8 @@ apt (0.9.7.9~exp2) UNRELEASED; urgency=low
   [ Michael Vogt ]
   * methods/connect.cc:
     - use Errno() instead of strerror(), thanks to David Kalnischk
+  * doc/apt.conf.5.xml:
+    - document Acquire::ForceIPv{4,6}
 
  -- Christian Perrier <bubulle@debian.org>  Sun, 24 Mar 2013 08:57:45 +0100
 
